--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,8 +1,11 @@
 version: 0.2
+env:
+    secrets-manager:
+      TOKEN: firstSecret:tokenForSonar
 phases:
   install:
     runtime-versions:
       java: latest
   build:
     commands:
-      - mvn verify sonar:sonar -Dsonar.projectKey=awsorganizarion -Dsonar.organization=awsorganizarion -Dsonar.host.url=https://sonarcloud.io -Dsonar.token=3727e8e19a8caaac0bff4ab73eb707947371c2ff
+      - mvn verify sonar:sonar -Dsonar.projectKey=awsorganizarion -Dsonar.organization=awsorganizarion -Dsonar.host.url=https://sonarcloud.io -Dsonar.token=$TOKEN
